--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@nestjs/common": "^8.2.3",
     "@nestjs/core": "^8.2.3",
+    "@nestjs/jwt": "^8.0.0",
     "@nestjs/platform-express": "^8.2.3",
     "@nestjs/swagger": "^5.1.5",
     "dotenv": "^10.0.0",
